--- a/src/components/ui/TareasList/TareasList.module.css
+++ b/src/components/ui/TareasList/TareasList.module.css
@@ -65,3 +65,14 @@ padding: 1rem; */
 .conteinerTaskBacklog {
     display: flex;
 }
+.conatinerTareasCard{
+display: flex;
+flex-direction: column;
+gap: 1rem;
+padding: 1rem;
+background-color:#D4EAF4;
+width: 100%;
+height: 100%;
+overflow-y: auto;
+border-radius: 0.6rem;
+}
