--- a/src/components/ui/TareasList/TareasList.module.css
+++ b/src/components/ui/TareasList/TareasList.module.css
@@ -66,11 +66,12 @@ padding: 1rem; */
     display: flex;
 }
 .conatinerTareasCard{
+margin-top: 20px;
 display: flex;
 flex-direction: column;
 gap: 1rem;
 padding: 1rem;
-background-color:#D4EAF4;
+/* background-color:#D4EAF4; */
 width: 100%;
 height: 100%;
 overflow-y: auto;
