--- a/src/components/ui/SprintList/SprintList.module.css
+++ b/src/components/ui/SprintList/SprintList.module.css
@@ -67,10 +67,14 @@
     align-items: center;
     justify-content: center;
     border: 1px solid black;
-    padding: 20px;
+    padding: 10px;
+    width: 200px;
     /* border-radius: 10px; */
     p{
         margin-left: 10px;
+    }
+    button{
+        background-color: #FFFF;
     }
 }
 .bookadd{
@@ -81,7 +85,7 @@
     font-weight: normal;
     display: flex;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 30px;
+    font-size: 20px;
     /* border: 3px solid black; */
     /* padding: 15px 25px; */
     /* display: inline-block;   */
