Maquetado screen sprints

--- a/src/components/ui/CardList/ModalCreateCard/ModalCreateCard.module.css
+++ b/src/components/ui/CardList/ModalCreateCard/ModalCreateCard.module.css
@@ -33,9 +33,13 @@
     display: flex;
     justify-content: space-between;
     margin-top: 10px;
-    button{
-    color: white;
-    background-color: #8A8BCE;
+    .buttonClose{
+      background-color: green;
+      color: white;
+    }
+    .buttonCreate{
+      color: white;
+      background-color: red;
     }
   }
   
