--- a/src/components/ui/SprintList/SprintList.module.css
+++ b/src/components/ui/SprintList/SprintList.module.css
@@ -22,6 +22,9 @@
     align-items: center;
     justify-content: center;
     padding: 5px 10px;
+    h2{
+        color: white;
+    }
 
     p {
         margin-left: 10px;
