--- a/src/components/ui/CardList/TareaCardSprint/TareaCardSprint.module.css
+++ b/src/components/ui/CardList/TareaCardSprint/TareaCardSprint.module.css
@@ -45,12 +45,12 @@
   
   .backlogBtn {
     background-color: #4CAF50;
-    color: white;
+    color: black;
   }
   
   .progressBtn {
     background-color: #f0ad4e;
-    color: white;
+    color: black;
   }
   
   .iconBtn {
