--- a/src/components/ui/CardList/ViewCard/ViewCard.module.css
+++ b/src/components/ui/CardList/ViewCard/ViewCard.module.css
@@ -14,6 +14,7 @@
   
   /* Contenido del modal */
   .modalContent {
+    color: black;
     font-size: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background: #e0f2ff; /* Fondo azul claro */
@@ -29,7 +30,7 @@
   /* Botón de cerrar */
   .modalContent button {
     background: #ff6b6b;
-    color: white;
+    color: black;
     border: none;
     padding: 10px 15px;
     margin-top: 10px;
