--- a/src/components/Screens/SprintsScreen.module.css
+++ b/src/components/Screens/SprintsScreen.module.css
@@ -1,26 +1,16 @@
 .container {
-    display: flex;
-  }
-  .sidebar {
-    width: 20%;
-  }
-  .content {
-    width: 70%;
-    height: 100vh;
-  }
+  display: grid;
+  grid-template-columns: 20vw 80vw;
+   /* En pantallas grandes vuelve a su diseño original */
+}
+
+.sidebar {
+  height: 100vh;
+}
+
+.content {
+  /* width: 70%;
+  height: 100vh; */
   
-  @media (min-width: 768px) {
-    .container {
-      flex-direction: row; /* En pantallas grandes vuelve a su diseño original */
-    }
+}
   
-    .sidebar {
-      width: 20%;
-      height: 100vh;
-    }
-  
-    .content {
-      width: 70%;
-      height: 100vh;
-    }
-  }
