--- a/src/components/ui/CardList/TareaCardSprint/TareaCardSprint.module.css
+++ b/src/components/ui/CardList/TareaCardSprint/TareaCardSprint.module.css
@@ -1,8 +1,7 @@
 .cardContainer {
-    background-color: none;
-    padding: 16px;
+    background-color: blue;
     color: white;
-    width: 280px;
+    width: 100%;
     margin: 10px auto;
   }
   
@@ -28,7 +27,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 6px;
+    gap: 2px;
     margin-top: 12px;
     flex-wrap: nowrap;
   }
