Proyecto pre-Terminado, Creacion del filtrado por dias a vencer, y ordenado del codigo y carpetas

--- a/src/components/ui/CardList/SprintCard/SprintCard.module.css
+++ b/src/components/ui/CardList/SprintCard/SprintCard.module.css
@@ -50,3 +50,10 @@ border-radius: 10px;
   .iconButton:nth-child(3) svg {
     fill: red;
   }
+  .proximaAVencer {
+    border: 5px solid #ffc107; /* Amarillo */
+  }
+  
+  .expirada {
+    border: 5px solid #dc3545; /* Rojo */
+  }
