--- a/src/components/ui/SprintList/SprintList.module.css
+++ b/src/components/ui/SprintList/SprintList.module.css
@@ -1,8 +1,11 @@
 .containerMain {
     background-color: #E4EAED;
+    /* background-color: #8A8BCE; */
     display: flex;
     flex-direction: column;
     padding: 1rem;
+    /* height: 80vh; */
+    /* overflow: scroll; */
 }
 
 .containerTittleSprintList {
@@ -57,13 +60,18 @@
     flex-direction: column;
     align-items: center;
     background-color: #FFFCFC;
+    /* background-color: #8A8BCE; */
     gap: 1rem;
     padding: 1rem;
+    height: 80vh;
+    max-width: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
     /* width: 80%; */
-    min-height: 100vh;
+    /* min-height: 100vh; */
     /* max-width: 68vh; */
-    overflow-y: auto;
-    border-radius: 0.6rem;
+    /* overflow-y: auto; */
+    /* border-radius: 0.6rem; */
 }
 .listandicon{
     display: flex;
