--- a/src/components/ui/CardList/TareaCardSprint/TareaCardSprint.module.css
+++ b/src/components/ui/CardList/TareaCardSprint/TareaCardSprint.module.css
@@ -2,16 +2,19 @@
   display: flex;
   justify-content: center;
   margin: 1rem 0;
+  width: 100%;
 }
 
 .card {
   background-color: white;
   color: black;
   padding: 10px;
+  font-size: 20px;
   text-align: left; /* 👈 Esto asegura alineación izquierda */
   display: flex;
   flex-direction: column;
   align-items: flex-start; /* 👈 También importante */
+  width: 100%;
 }
 
 
@@ -50,7 +53,7 @@
   /* padding: 0.4rem 0.7rem; */
   border: none;
   border-radius: 6px;
-  font-size:8px;
+  font-size:15px;
   font-weight: bold;
   cursor: pointer;
   height: 32px;
@@ -65,14 +68,14 @@
   color: white;
   border: none;
   border-radius: 6px;
-  padding:  0.6rem;
-  font-size: 8px;
+  /* padding: 0 0.6rem; */
+  font-size: 15px;
   font-weight: bold;
   height: 32px;
   appearance: none;
   cursor: pointer;
   display: flex;
-  /* align-items: center; */
+  align-items: center;
 }
 
 /* Botones de íconos */
