--- a/src/components/ui/CardList/SprintCard/SprintCard.module.css
+++ b/src/components/ui/CardList/SprintCard/SprintCard.module.css
@@ -51,9 +51,9 @@ border-radius: 10px;
     fill: red;
   }
   .proximaAVencer {
-    border: 5px solid #ffc107; /* Amarillo */
+    border-left: 5px solid #ffc107; /* Amarillo */
   }
   
   .expirada {
-    border: 5px solid #dc3545; /* Rojo */
+    border-left: 5px solid #dc3545; /* Rojo */
   }
