--- a/src/components/Screens/Backlog/TareaSreen.module.css
+++ b/src/components/Screens/Backlog/TareaSreen.module.css
@@ -1,6 +1,7 @@
 .container {
   display:flex ;
   flex-direction: column;
+  overflow-x: hidden;
   }
   .sidebar {
     width: 20%;
@@ -25,3 +26,4 @@
       height: 100vh;
     }
   }
+ 
