--- a/src/components/Screens/Sprint/SprintsScreen.module.css
+++ b/src/components/Screens/Sprint/SprintsScreen.module.css
@@ -13,4 +13,10 @@
   height: 100vh; */
   
 }
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* Oculta el scroll horizontal */
+  width: 100%;
+}
   
