--- a/src/components/ui/TareasList/TareasList.module.css
+++ b/src/components/ui/TareasList/TareasList.module.css
@@ -1,5 +1,6 @@
 .containerTasks {
     padding: 20px;
+    
 
 }
 
@@ -53,13 +54,15 @@
     display: flex;
 }
 .conatinerTareasCard{
-margin-top: 20px;
-display: flex;
-flex-direction: column;
-gap: 1rem;
-padding: 1rem;
-width: 100%;
-height: 100%;
-overflow-y: auto;
-border-radius: 0.6rem;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+    width: 100%;
+    height: 70vh; /* Fijo o ajustable según tu layout */
+    overflow-y: auto; /* Scroll vertical */
+    overflow-x: hidden;
+    border-radius: 0.6rem;
+
 }
