--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .main-container {
     width: 100%;
     max-width: 100vw;
-    overflow-x: hidden;
+    overflow: hidden;
     position: relative;
   }
   
