--- a/src/components/Screens/Backlog/TareaSreen.module.css
+++ b/src/components/Screens/Backlog/TareaSreen.module.css
@@ -1,7 +1,12 @@
 .container {
   display:flex ;
   flex-direction: column;
-  overflow-x: hidden;
+  max-height: 100vh;
+
+  }
+  .containerPrincipal{
+    
+    max-height: 100vh;
   }
   .sidebar {
     width: 20%;
