--- a/src/components/Screens/Sprint/SprintsScreen.module.css
+++ b/src/components/Screens/Sprint/SprintsScreen.module.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 20vw 80vw;
    /* En pantallas grandes vuelve a su diseño original */
+   overflow: unset;
 }
 
 .sidebar {
@@ -13,10 +14,3 @@
   height: 100vh; */
   
 }
-html, body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden; /* Oculta el scroll horizontal */
-  width: 100%;
-}
-  
