--- a/src/components/ui/CardList/ViewCard/ViewCard.module.css
+++ b/src/components/ui/CardList/ViewCard/ViewCard.module.css
@@ -17,15 +17,25 @@
     color: black;
     font-size: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background: #e0f2ff; /* Fondo azul claro */
-    padding: 20px;
+    background: #e0f2ff;
     border-radius: 10px;
     width: 400px;
     max-width: 90%;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-    /* text-align: center; */
-    position: relative;
+  
+    /* Agrega espacio interno */
+    padding: 20px;
+  
+    /* Para espaciar los elementos hijos */
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  
+    /* Centrado si lo necesitas */
+    margin: 40px auto;
+    text-align: left;
   }
+  
   
   /* Botón de cerrar */
   .modalContent button {
@@ -36,6 +46,7 @@
     margin-top: 10px;
     border-radius: 5px;
     cursor: pointer;
+    text-align: center;
   }
   
   .modalContent button:hover {
