--- a/src/components/ui/SprintList/SprintList.module.css
+++ b/src/components/ui/SprintList/SprintList.module.css
@@ -54,6 +54,9 @@
 
 
 }
+html,body{
+    overflow: hidden;
+}
 
 .containerSprintList {
     display: flex;
@@ -65,6 +68,7 @@
     padding: 1rem;
     max-height: 74vh;
     max-width: 100%;
+    overflow: unset;
     overflow-x: hidden;
     overflow-y: scroll;
     /* width: 80%; */
